# ImageSearch

./: .gitignore  ImageSearch_config.xml  README.md  client_main.cpp  readme.txt  server_main.cpp  test_main.cpp
cmake/: .gitignore  CMakeLists.txt
inc/: Common.h  ImageDB.h  ImageHash.h  SearchEngine.h  VocabTree.h
src/: Common.cpp  ImageDB.cpp  ImageHash.cpp  SearchEngine.cpp  VocabTree.cpp
